--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,46 @@
-/* write your override styles here */
+.tag-1 {
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display: block;
+}
+#tag-2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
+#tag-3 {
+    position: absolute;
+    top: 0
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
+#tag-4 {
+    position: absolute;
+    top: 0;
+    left: 0
+    width: 980px;
+    height: 622px; 
+}
+#tag-5 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
+#tag-6 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
+#tag-7 {
+    position: absolute;
+    top: 0
+    left: 0
+    width: 980px;
+}
